--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,11 @@
 {
   "name": "УК Зелёная Долина - Личный кабинет жильца",
   "short_name": "Зелёная Долина",
+  "version": "2.0.1",
   "description": "PWA приложение для управления ЖК и коммунальными услугами",
-  "start_url": "/",
-  "display": "standalone",
+  "start_url": "/?v=2.0.1",
+  "display": "fullscreen",
+  "display_override": ["fullscreen", "standalone"],
   "theme_color": "#10b981",
   "background_color": "#ffffff",
   "orientation": "portrait-primary",
@@ -11,7 +13,7 @@
   "lang": "ru",
   "dir": "ltr",
   "categories": ["business", "productivity", "utilities", "finance"],
-  "id": "uk-zelenaya-dolina-pwa",
+  "id": "uk-zelenaya-dolina-pwa-v2",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
