--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,14 @@
     Pragma = "no-cache"
     Expires = "0"
     
+    # НОВОЕ: Добавляем версию в заголовки
+    X-App-Version = "2.0.0"
+    
     # Отключаем Service Worker
     Service-Worker-Allowed = "/"
+    
+    # Принудительная валидация кеша
+    Vary = "Accept-Encoding, User-Agent"
     
     # Безопасность
     X-Frame-Options = "DENY"
@@ -24,6 +30,13 @@
   [headers.values]
     Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
     Service-Worker-Allowed = "/"
+
+[[headers]]
+  # Для version.json
+  for = "/version.json"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
+    Content-Type = "application/json"
 
 [[headers]]
   # Для manifest и иконок
