--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@
     Expires = "0"
     
     # НОВОЕ: Добавляем версию в заголовки
-    X-App-Version = "2.0.0"
+    X-App-Version = "3.0.0"
     
     # Отключаем Service Worker
     Service-Worker-Allowed = "/"
@@ -43,6 +43,13 @@
   for = "/manifest.json"
   [headers.values]
     Cache-Control = "no-cache, no-store, must-revalidate, max-age=0"
+
+[[redirects]]
+  # Редирект manifest.json на 404 (полностью отключаем PWA)
+  from = "/manifest.json"
+  to = "/404.html"
+  status = 404
+  force = true
 
 [[redirects]]
   # Редирект для ЛЮБЫХ старых Service Worker URL на пустой SW
