--- a/public/manifest.json
+++ b/public/manifest.json
@@ -57,7 +57,7 @@
       "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     },
     {
       "src": "./icon-384x384.png",
@@ -68,7 +68,7 @@
       "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ]
 }
