--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "engines": {
     "node": ">=14.0.0"
   },
+  "dependencies": {
+    "zustand": "^4.4.7"
+  },
   "devDependencies": {
     "jest": "^30.2.0"
   }
